--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 header {
     background-color: rgb(59, 58, 58);
     display: flex;
@@ -20,6 +26,71 @@ header li {
     display: inline;
     color: white;
     
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+}
+
+form {
+    /* display: flex; */
+    background-color: #1C1C1C;
+    color: white;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    margin: 0 4rem;
+    gap: 1rem;
+}
+
+.form1{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.field{
+    display: flex;
+    flex-direction: column;
+}
+
+.arrivee {
+    background-image: url(../img/Lille-Seminaires.jpg);
+    background-position: center;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    display: flex;
+    padding: 5rem;
+}
+
+.arrivee div{
+    margin: 0 auto;
+    background-color: rgba(255, 255, 255, 0.7);
+    height: fit-content;
+    padding: 0.8rem;
+    font-size: 2rem;
+    color: #333333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+hr{
+    width: 25%;
+}
+
+select{
+    background-color: #4C5152;
+}
+
+button {
+    background-color: #B99470;
+    padding: 1rem;
+    color: white;
+    border: 0;
 }
 
 .depart {
