--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,3 +2,6 @@ $orange: #B99470;
 $option-gray: #4C5152;
 $light-gray: #333333 ;
 $dark-gray: #1C1C1C;
+
+$white: white;
+$transparent-white: rgba(255, 255, 255, 0.7);
