CSS rangement + reset + main font

--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,43 @@
+/* ========= RESET ========= */
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
+html{
+    font-size: 62.5%;
+}
+
+body{
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+/* ========= HEADER ========= */
+
 header {
   background-color: #333333;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 5rem;
-  padding: 0 1rem;
+  padding: 3rem 2rem;
 }
 
-.logo {
-  width: 40%;
+header img{
+    width: 60%;
+}
+
+nav {
+  width: 50%;
 }
 
 header ul {
-  display: flex;
-  justify-content: space-around;
-  width: 250px;
+    display: flex;
+    justify-content: flex-end;
+    gap: 2rem;
 }
 
 header li {
@@ -28,63 +45,79 @@ header li {
   color: white;
 }
 
+
+
+/* ========= CORPS ========= */
+
+
 main {
   display: flex;
   flex-direction: column;
   gap: 4rem;
 }
 
+
+/* == IMAGE 1 == */
+
+.arrivee {
+    background-image: url(../img/Lille-Seminaires.jpg);
+    background-position: center;
+    width: 100%;
+    /* background-size: cover; */
+    background-repeat: no-repeat;
+    display: flex;
+    padding: 5rem;
+}
+  
+.arrivee div {
+    margin: 0 auto;
+    background-color: rgba(255, 255, 255, 0.7);
+    height: fit-content;
+    padding: 0.8rem;
+    font-size: 2rem;
+    color: #333333;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+hr {
+    width: 25%;
+}
+
+h2{
+    font-family: 'Times New Roman', Times, serif;
+}
+
+
+/* == FORMULAIRE 1 == */
+
 form {
   /* display: flex; */
   background-color: #1C1C1C;
   color: white;
-  padding: 2rem;
+  padding: 3rem;
   display: flex;
   flex-direction: column;
   /* margin: 0 4rem; */
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .form1 {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .field {
   display: flex;
   flex-direction: column;
+  gap: 0.7rem;
 }
 
 input, select {
-  padding: 0.7rem;
-}
-
-.arrivee {
-  background-image: url(../img/Lille-Seminaires.jpg);
-  background-position: center;
-  width: 100%;
-  /* background-size: cover; */
-  background-repeat: no-repeat;
-  display: flex;
-  padding: 5rem;
-}
-
-.arrivee div {
-  margin: 0 auto;
-  background-color: rgba(255, 255, 255, 0.7);
-  height: fit-content;
-  padding: 0.8rem;
-  font-size: 2rem;
-  color: #333333;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1.5rem;
-}
-
-hr {
-  width: 25%;
+  padding: 1.5rem;
 }
 
 option {
@@ -93,12 +126,20 @@ option {
   border: 0;
 }
 
+.breakfast{
+    display: flex;
+    gap: 2rem;
+}
+
 button {
   background-color: #B99470;
   padding: 1rem;
   color: white;
   border: 0;
 }
+
+
+/* == IMAGE 2 == */
 
 .depart {
   background-image: url(../img/Lille-Hall.jpg);
@@ -125,6 +166,9 @@ button {
   size: 3px;
   width: 30px;
 }
+
+
+/* == FORMULAIRE 2 == */
 
 #form2 {
   background-color: #1C1C1C;
