--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,28 +1,49 @@
 @use "variables" as v ;
 
+/* 
+========= RESET ========= 
+*/
+
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
+
+html{
+    font-size: 62.5%;
+}
+
+body{
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+/* 
+========= HEADER ========= 
+*/
 
 header {
     background-color: v.$light-gray;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 5rem;
-    padding: 0 1rem;
+    padding: 3rem 2rem;
 }
 
-.logo {
-    width: 40%;       
+header img{
+    width: 60%;
+}
+
+nav {
+  width: 50%;
 }
 
 header ul {
     display: flex;
-    justify-content: space-around;
-    width: 250px;
+    justify-content: flex-end;
+    gap: 2rem;
 }
 
 header li {
@@ -31,37 +52,20 @@ header li {
     
 }
 
+
+/* 
+========= CORPS ========= 
+*/
+
 main {
     display: flex;
     flex-direction: column;
     gap: 4rem;
 }
 
-form {
-    /* display: flex; */
-    background-color: v.$dark-gray;
-    color: v.$white;
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    /* margin: 0 4rem; */
-    gap: 1rem;
-}
-
-.form1{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.field{
-    display: flex;
-    flex-direction: column;
-}
-
-input, select{
-    padding: 0.7rem;
-}
+/*
+ == IMAGE 1 == 
+ */
 
 .arrivee {
     background-image: url(../img/Lille-Seminaires.jpg);
@@ -72,10 +76,10 @@ input, select{
     display: flex;
     padding: 5rem;
 }
-
-.arrivee div{
+  
+.arrivee div {
     margin: 0 auto;
-    background-color: v.$transparent-white;
+    background-color: rgba(255, 255, 255, 0.7);
     height: fit-content;
     padding: 0.8rem;
     font-size: 2rem;
@@ -86,8 +90,44 @@ input, select{
     gap: 1.5rem;
 }
 
-hr{
+hr {
     width: 25%;
+}
+
+h2{
+    font-family: 'Times New Roman', Times, serif;
+}
+
+
+/*
+ == FORMULAIRE 1 == 
+ */
+
+form {
+    /* display: flex; */
+    background-color: v.$dark-gray;
+    color: v.$white;
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    /* margin: 0 4rem; */
+    gap: 2rem;
+}
+
+.form1{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.field{
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
+}
+
+input, select{
+    padding: 1.5rem;
 }
 
 option{
@@ -96,12 +136,22 @@ option{
     border: 0;
 }
 
+.breakfast{
+    display: flex;
+    gap: 2rem;
+}
+
 button {
     background-color: v.$orange;
     padding: 1rem;
     color: v.$white;
     border: 0;
 }
+
+
+/*
+ == IMAGE 2 == 
+ */
 
 .depart {
     background-image: url(../img/Lille-Hall.jpg);
@@ -128,6 +178,11 @@ button {
     size: 3px;
     width: 30px;
 }
+
+
+/*
+ == FORMULAIRE 2 == 
+ */
 
 #form2 {
     background-color: v.$dark-gray;
