--- a/sass/main.scss
+++ b/sass/main.scss
@@ -95,7 +95,7 @@ hr {
 }
 
 h2{
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'EB Garamond', serif;
 }
 
 
@@ -162,23 +162,19 @@ button {
     padding: 5rem;
 }
 
-.departext {
+.depart div {
+    margin: 0 auto;
+    background-color: rgba(255, 255, 255, 0.7);
+    height: fit-content;
+    padding: 0.8rem;
+    font-size: 2rem;
+    color: #333333;
     display: flex;
     flex-direction: column;
-    margin: auto;
-    background-color: v.$transparent-white;
+    align-items: center;
+    gap: 1.5rem;
     
 }
-.depart .departext p {
-    margin: auto;
-}
-
-.departext hr {
-    color: v.$orange;
-    size: 3px;
-    width: 30px;
-}
-
 
 /*
  == FORMULAIRE 2 == 
@@ -192,19 +188,11 @@ button {
     padding : 2rem
 }
 
-#form2 button {
-    margin-top: 2rem ;
-    background-color: v.$orange;
-    height: 2rem;
-}
 
 #form2 label {
     margin-top: 1rem;
 }
 
-#form2 input {
-    height: 1.5rem;
-}
 
 .facture {
     text-align: center;
