--- a/css/main.css
+++ b/css/main.css
@@ -25,19 +25,21 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 3rem 2rem;
+  gap: 2rem;
+}
+
+.logo {
+  width: 25rem;
 }
 
 header img {
-  width: 60%;
-}
-
-nav {
-  width: 50%;
+  width: 100%;
 }
 
 header ul {
   display: flex;
   justify-content: flex-end;
+  flex-wrap: wrap;
   gap: 2rem;
 }
 
@@ -65,7 +67,7 @@ main {
   /* background-size: cover; */
   background-repeat: no-repeat;
   display: flex;
-  padding: 5rem;
+  padding: 10rem 0;
 }
 
 .arrivee div {
@@ -78,7 +80,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.5rem;
+  gap: 2rem;
 }
 
 hr {
@@ -87,6 +89,7 @@ hr {
 
 h2 {
   font-family: "Times New Roman", Times, serif;
+  font-size: 4rem;
 }
 
 /*
@@ -101,18 +104,37 @@ form {
   flex-direction: column;
   /* margin: 0 4rem; */
   gap: 2rem;
+  justify-content: space-between;
+}
+@media screen and (min-width: 1199px) {
+  form {
+    flex-direction: row;
+    align-items: end;
+  }
 }
 
 .form1 {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 2rem;
+  flex: 1;
+}
+@media screen and (min-width: 991px) {
+  .form1 {
+    flex-direction: row;
+  }
 }
 
 .field {
   display: flex;
   flex-direction: column;
   gap: 0.7rem;
+}
+@media screen and (min-width: 991px) {
+  .field {
+    width: 18%;
+  }
 }
 
 input, select {
@@ -132,9 +154,11 @@ option {
 
 button {
   background-color: #B99470;
-  padding: 1rem;
+  padding: 1.7rem;
   color: white;
   border: 0;
+  flex-basis: 18%;
+  height: fit-content;
 }
 
 /*
