--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ form {
   display: flex;
   flex-direction: column;
   /* margin: 0 4rem; */
-  gap: 1rem;
+  gap: 2rem;
   justify-content: space-between;
 }
 @media screen and (min-width: 1199px) {
@@ -140,11 +140,16 @@ form div div {
 }
 form button {
   background-color: #B99470;
-  padding: 1.7rem;
+  padding: 1.2rem;
   color: white;
   border: 0;
-  flex-basis: 15%;
-  width: 100%;
+  display: flex;
+  gap: 0.5rem;
+  justify-content: center;
+  align-items: center;
+}
+form button:hover {
+  cursor: pointer;
 }
 
 .breakfast {
