--- a/sass/main.scss
+++ b/sass/main.scss
@@ -87,11 +87,11 @@ main {
     
     div{
         margin: 0 auto;
-        background-color: rgba(255, 255, 255, 0.7);
+        background-color: v.$transparent-white;
         height: fit-content;
         padding: 0.8rem;
         font-size: 2rem;
-        color: #333333;
+        color: v.$light-gray;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -205,11 +205,23 @@ option{
 .facture {
     text-align: center;
     background-color: v.$orange ;
-    padding: 1rem;
+    padding: 5rem;
     color: v.$white;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
 
-
+.payment{
+    background-color: v.$white;
+    color: v.$orange;
+    padding: 1rem 2rem;
+    margin: auto;
+    width: fit-content;
+    &:hover{
+        cursor: pointer;
+    }
+}
 
 
 
